# free_RTOS

./: 2905_log.txt  CMakeLists.txt  log.txt  log_1406.txt  my_esp_log.txt  partitions.csv  sdkconfig  sdkconfig.old
main/: CMakeLists.txt  idf_component.yml
main/inc/: app_config.h  app_status.h  ota_client.h
main/src/: lcd_task.c  main.c  mqtt_task.c  ntp_task.c  ota_task.c  sensor_task.c  wifi_task.c
